internal/xds/translator/testdata/out/xds-ir/oidc-and-jwt-with-passthrough.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - www.example.com
    name: envoy-gateway/gateway-1/http/www_example_com
    routes:
    - match:
        prefix: /
      name: httproute/default/httproute-1/rule/0/match/0/www_example_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.jwt_authn:
          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          requirementName: example1-or-example2-or-example3-or-example4_f1dce4fcb58e4627
        envoy.filters.http.oauth2:
          '@type': type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2PerRoute
          config:
            authScopes:
            - openid
            authType: BASIC_AUTH
            authorizationEndpoint: https://oauth.foo.com/oauth2/v2/auth
            cookieConfigs:
              codeVerifierCookieConfig:
                path: /oauth2/callback
              oauthNonceCookieConfig:
                path: /oauth2/callback
            credentials:
              clientId: client.oauth.foo.com
              cookieNames:
                bearerToken: AccessToken-b0a1b740
                codeVerifier: CodeVerifier-b0a1b740
                idToken: IdToken-b0a1b740
                oauthExpires: OauthExpires-b0a1b740
                oauthHmac: OauthHMAC-b0a1b740
                oauthNonce: OauthNonce-b0a1b740
                refreshToken: RefreshToken-b0a1b740
              hmacSecret:
                name: oauth2/hmac_secret/securitypolicy/envoy-gateway/security-policy-1
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
              tokenSecret:
                name: oauth2/client_secret/securitypolicy/envoy-gateway/security-policy-1
                sdsConfig:
                  ads: {}
                  resourceApiVersion: V3
            passThroughMatcher:
            - name: Authorization
              stringMatch:
                ignoreCase: true
                prefix: 'Bearer '
            - name: MyHeaderPrefixed
              stringMatch:
                prefix: MyPrefix
            - name: MyHeaderNoPrefix
            preserveAuthorizationHeader: true
            redirectPathMatcher:
              path:
                exact: /oauth2/callback
            redirectUri: https://www.example.com/oauth2/callback
            signoutPath:
              path:
                exact: /logout
            statPrefix: securitypolicy/envoy-gateway/security-policy-1
            tokenEndpoint:
              cluster: oauth_foo_com_443
              timeout: 10s
              uri: https://oauth.foo.com/token
            useRefreshToken: true
